@@ -1,10 +1,13 @@
 package be.dnsbelgium.mercator.vat.wappalyzer;
 
-import be.dnsbelgium.mercator.vat.wappalyzer.jappalyzer.PageResponse;
+import be.dnsbelgium.mercator.vat.domain.Page;
 import org.junit.Before;
 import org.junit.Test;
 
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 import static org.junit.Assert.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -19,24 +22,22 @@ public class TechnologyAnalyzerTest {
     }
 
     @Test
-    public void testAnalyze() {
-        List<PageResponse> pageResponses = new ArrayList<>();
+    public void testAnalyzeWithPage() {
         String content1 = "<html><head><meta name=\"generator\" content=\"WordPress 5.8\" /></head><body></body></html>";
         String content2 = "<html><head><meta name=\"generator\" content=\"Joomla! - Open Source Content Management\" /></head><body></body></html>";
         Map<String, List<String>> headers = new HashMap<>();
-        headers.put("Content-Type", Collections.singletonList("text/html"));
+        headers.put("Content-Type", List.of("text/html"));
 
-        PageResponse pageResponse1 = new PageResponse(200, headers, content1);
-        PageResponse pageResponse2 = new PageResponse(200, headers, content2);
+        List<Page> pages = List.of(
+            Page.builder().statusCode(200).headers(headers).responseBody(content1).build(),
+            Page.builder().statusCode(200).headers(headers).responseBody(content2).build());
 
-        pageResponses.add(pageResponse1);
-        pageResponses.add(pageResponse2);
-
-        Set<String> detectedTechnologies = technologyAnalyzer.analyze(pageResponses);
+        Set<String> detectedTechnologies = technologyAnalyzer.analyze(pages);
 
         assertNotNull(detectedTechnologies);
-        Set<String> expectedTechnologies = new HashSet<>(Arrays.asList("WordPress", "Joomla", "MySQL", "PHP"));
+        Set<String> expectedTechnologies = Set.of("WordPress", "Joomla", "MySQL", "PHP");
         assertEquals(expectedTechnologies, detectedTechnologies);
+
     }
 
 }
